-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v0.31 - Dec 10, 2017

 + ICY: save tracks from AAC radio stream into .m4a (with --stream-copy)

 + .aac reader: support --stream-copy to .mp4
 - .mpc decode: an "AP" block could be skipped
 - ICY: reset HTTP response headers on reconnect
 * net: don't reconnect if server closed connection gracefully
 - WASAPI: exclusive mode: hanging after starting the next track (v0.29 bug)
 - TUI: apply volume on track change
 * TUI: linux: remove separate thread for reading from stdin
 * core.so is loaded dynamically from mod/
   all modules were moved to mod/


fmedia v0.30.2 - Nov 8, 2017

 - core: Linux,FreeBSD: couldn't run fmedia executable from $PATH (v0.30 bug)
 - ICY: corrupt data (MP3) or error (AAC) in some cases (v0.30 bug)


fmedia v0.30.1 - Nov 7, 2017

 - core: Linux,FreeBSD: couldn't run fmedia executable from symlink (v0.30 bug)
 - core: Linux: timer restart failed with an error "File exists" (v0.30 bug)


fmedia v0.30 - Nov 5, 2017

 + .aac (ADTS) file input (no seeking)
 + ICY: support shoutcast AAC streams

 * AAC decode: detect real audio format (support implicit SBR, SBR+PS)
 + AAC encode: choose profile between AAC-LC, HE-AAC or HE-AACv2 (--aac-profile option)
 * AAC,ALAC,APE: linux: libfdk-aac-ff.so, libALAC-ff.so, libMAC-ff.so don't depend on the system libstdc++
 - .flac write: segfault on large meta (FF v16.08 bug)
 - MPEG decode: data from .mkv was skipped (v0.29 bug)
 - WASAPI: segfault or hanging when playing a network stream (v0.29 bug)
 - ICY: don't start playing a network stream if its content type isn't supported
 - ICY: reconnect to the original server after redirected request fails
 - core: freebsd: file reading didn't work on some file systems
 - core: segfault on several quick commands from TUI (v0.18 bug)


fmedia v0.29.2 - Sep 13, 2017
